--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+
+  "homepage": "https://TRIUMPH222.github.io/Codelogy_dev",
   "name": "codelogy_dev",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" :"gh-pages -d dist "
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
